# TelegramVault

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  db_schema.sql  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml
backend/: crawler_server.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/core/: api_rate_limiter.py  api_retry_wrapper.py  config.py  config_manager.py  constraint_validator.py  database_manager.py  download_queue_manager.py  duplicate_detector.py  enhanced_logging_system.py  file_system_manager.py  logging_config.py  media_validator.py  queue_types.py  security.py  session_manager.py  session_recovery_manager.py  worker_coordinator.py
backend/app/db/: database.py
backend/tests/: test_api_retry_wrapper.py  test_config_manager.py  test_database_schema_fixes.py  test_enhanced_logging_system.py  test_property_api_parameter_validation.py  test_property_concurrent_user_creation.py  test_property_enrichment_error_resilience.py  test_property_error_categorization.py  test_property_exponential_backoff.py  test_property_incomplete_user_data.py  test_property_photo_priority.py  test_property_re_enrichment_30_days.py  test_property_retry_attempt_limits.py  test_property_transient_error_retry.py  test_property_upsert_conflict_handling.py
client/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
client/src/: App.tsx  index.css
docs/: CONFIGURATION.md  MIGRATION_GUIDE.md
scripts/: prepare-release.sh  verify-clean.sh
(+107 files in other folders)
